[package]
name = "eyeliner"
version = "0.1.0"
authors = ["Dylan Frankland <dylan@frankland.io>"]
description = "A CSS inliner for making emails."
repository = "https://github.com/dfrankland/eyeliner"
readme = "README.md"
keywords = ["html", "css", "email", "inliner"]
categories = ["email", "development-tools", "parsing", "rendering", "template-engine"]
license = "MIT"
